<resources>
    <string name="app_name">WaterBalance</string>

    <string name="amount_of_water">Amount of water</string>
    <string name="left">LEFT</string>
    <string name="goal">GOAL</string>
    <string name="intake">INTAKE</string>

    <!-- Onboarding -->
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="goal_lower">Goal</string>

    <!-- User -->
    <string name="user_header">User</string>
    <string name="goal_header">Daily goal</string>

    <string name="weight_title">Weight</string>
    <string name="sex_title">Sex</string>
    <string name="enter_information">Enter information about you</string>
    <string name="time">Activity time</string>
    <string name="home">Home</string>
    <string name="statistic">Statistic</string>
    <string name="settings">Settings</string>
    <string name="week">Week</string>
    <string name="month">Month</string>

</resources>