<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="@dimen/big_margin"
        android:gravity="center"
        android:id="@+id/enterTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_information"
        android:textColor="@color/black"
        android:textSize="@dimen/text_average"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <LinearLayout
        android:gravity="center|start"
        android:id="@+id/sexLayout"
        android:layout_marginTop="@dimen/big_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/enterTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginEnd="@dimen/average_margin"
            android:src="@drawable/ic_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/sexTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/sex_title"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_normal"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center|start"
        android:id="@+id/weightLayout"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/sexLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/average_margin"
            android:src="@drawable/ic_weight" />

        <TextView
            android:id="@+id/weightTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/weight_title"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/big_margin"
        android:id="@+id/timeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/weightLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/average_margin"
            android:src="@drawable/ic_time" />

        <TextView
            android:id="@+id/timeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/time"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>